--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "posenet",
   "version": "0.1.0",
   "engines": {
-   "node": "14.17.3"
-   },
+    "node": "14.17.3"
+  },
   "private": true,
   "dependencies": {
     "@tensorflow-models/posenet": "^2.2.1",
@@ -11,13 +11,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "express": "^4.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-webcam": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
